--- a/src/index.css
+++ b/src/index.css
@@ -228,7 +228,7 @@ body::-webkit-scrollbar-thumb:hover {
 }
 
 .logoNavigation {
-  width: 12%;
+  width: 180px;
   height: 74.7%;
   margin-left: 10px;
 }
@@ -251,7 +251,7 @@ body::-webkit-scrollbar-thumb:hover {
 .balanceNavContainer {
   display: flex;
   justify-content: center;
-  gap: 5px;
+  gap: 3px;
   align-items: center;
   cursor: pointer;
 }
@@ -309,8 +309,8 @@ body::-webkit-scrollbar-thumb:hover {
   .loginBtn {
     width: 10%;
   }
-  .logoNavigation {
-    width: 15%;
+  .loggedNavContainer {
+    gap: 12px;
   }
 }
 
@@ -318,8 +318,11 @@ body::-webkit-scrollbar-thumb:hover {
   .loginBtn {
     width: 15%;
   }
-  .logoNavigation {
-    width: 20%;
+  .profileNavText {
+    display: none;
+  }
+  .loggedNavContainer {
+    gap: 10px;
   }
 }
 
@@ -327,8 +330,11 @@ body::-webkit-scrollbar-thumb:hover {
   .loginBtn {
     width: 20%;
   }
-  .logoNavigation {
-    width: 35%;
+  .profileNavText {
+    display: none;
+  }
+  .loggedNavContainer {
+    gap: 7px;
   }
 }
 
@@ -554,6 +560,7 @@ body::-webkit-scrollbar-thumb:hover {
   height: 100%;
   z-index: 0;
   overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .leftPanel {
@@ -936,7 +943,12 @@ body::-webkit-scrollbar-thumb:hover {
   .gamesInfo {
     font-size: 0.8em;
   }
+
   .sortParams{
+    width: 43%;
+  }
+
+  .sortParams:hover {
     width: 43%;
   }
 }
@@ -954,7 +966,12 @@ body::-webkit-scrollbar-thumb:hover {
   .gamesInfo {
     font-size: 0.6em;
   }
+
   .sortParams{
+    width: 50%;
+  }
+
+  .sortParams:hover {
     width: 50%;
   }
 }
@@ -1311,6 +1328,19 @@ body::-webkit-scrollbar-thumb:hover {
   text-shadow: 1px 1px 3px rgba(255, 255, 255, 0.5);
 }
 
+@media(max-width: 768px) {
+  .items {
+    width: 55%;
+    justify-content: center;
+  }
+
+  .CWGtext {
+    display: flex;
+    justify-content: center;
+    margin: 0;
+  }
+}
+
 .itemCircle {
   height: 3.3em;
   width: 3.3em;
@@ -1321,7 +1351,7 @@ body::-webkit-scrollbar-thumb:hover {
 }
 
 @media (max-width: 1200px) {
-  .playerGame, .itemCircle {
+  .playerGame, .itemCircle, .dotsPlayer2 {
     width: 40px;
     height: 40px;
   }
@@ -1329,7 +1359,7 @@ body::-webkit-scrollbar-thumb:hover {
 }
 
 @media (max-width: 992px) {
-  .playerGame, .itemCircle {
+  .playerGame, .itemCircle, .dotsPlayer2 {
     width: 30px;
     height: 30px;
   }
@@ -1365,7 +1395,7 @@ body::-webkit-scrollbar-thumb:hover {
   .imgsVs {
     gap: 15px;
   }
-  .playerGame {
+  .playerGame, .dotsPlayer2 {
     width: 4.2em;
     height: 4.2em;
   }
@@ -1377,7 +1407,7 @@ body::-webkit-scrollbar-thumb:hover {
   .itemCircle {
     width: 2.7em;
     height: 2.7em;
-    margin-right: -1.3em;
+    margin-right: -0.4em;
   }
   .divItems {
     margin-left: 1.3em;
@@ -2008,36 +2038,9 @@ body::-webkit-scrollbar-thumb:hover {
 
 @media (max-width: 768px) {
   .modalWindowGame {
-    height: 45%;
     width: 95%;
   }
 }
-
-/*.gameCancelBtn {*/
-/*  position: absolute;*/
-/*  right: 5px;*/
-/*  top: 5px;*/
-/*  border: none;*/
-/*  display: flex;*/
-/*  justify-content: center;*/
-/*  align-items: center;*/
-/*  padding: 0 10px;*/
-/*  font-family: 'Poppins', sans-serif;*/
-/*  font-weight: 500;*/
-/*  font-size: 1.1em;*/
-/*  color: rgba(255, 255, 255, 0.92);*/
-/*  border-radius: 8px;*/
-/*  min-height: 25px;*/
-/*  background-color: rgba(143, 7, 0, 0.95);*/
-/*}*/
-
-/*.gameCancelBtn:hover {*/
-/*  cursor: pointer;*/
-/*}*/
-
-/*.gameCancelBtn {*/
-/*  transform: translate(0.5px);*/
-/*}*/
 
 .lobbyPlayerContainer {
   display: flex;
@@ -2165,6 +2168,10 @@ body::-webkit-scrollbar-thumb:hover {
 @media (max-width: 992px) {
   .lobbyUsername {
     font-size: 1.4em;
+    max-width: 100px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
   .lobbyWorthText {
     font-size: 0.9em;
@@ -2179,6 +2186,9 @@ body::-webkit-scrollbar-thumb:hover {
     align-items: flex-end;
   }
   .lobbyPlayerContainer {
+    margin-top: 25%;
+    width: 47%;
+    height: 70%;
     justify-content: flex-end;
   }
   .lobbyUsername {
@@ -2349,26 +2359,28 @@ body::-webkit-scrollbar-thumb:hover {
 
 @media (max-width: 1200px) {
   #coin-container {
-    width: 130px;
-    height: 130px;
+    width: 250px;
+    height: 180px;
   }
 }
 
 @media (max-width: 992px) {
   #coin-container {
-    width: 90px;
-    height: 90px;
+    width: 200px;
+    height: 150px;
   }
 }
 
 @media (max-width: 768px) {
   .modalWindowGame {
-    justify-content: center;
+    justify-content: space-between;
+    align-items: flex-start;
     gap: 10px;
   }
   #coin-container {
-    width: 70px;
-    height: 70px;
+    top: -2.5%;
+    width: 180px;
+    height: 120px;
   }
 }
 
@@ -2399,6 +2411,7 @@ body::-webkit-scrollbar-thumb:hover {
   height: 100%;
   z-index: 0;
   overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .profileContainer {
@@ -2416,13 +2429,6 @@ body::-webkit-scrollbar-thumb:hover {
   margin-left: 14.5%;
   padding: 3px;
   transition: width 0.2s ease-in, margin-left 0.2s ease-in;
-}
-
-@media (max-width: 768px) {
-  .profileContainer {
-    width: 95vw;
-    margin-left: 2.5vw;
-  }
 }
 
 .profileInfo {
@@ -2523,6 +2529,7 @@ body::-webkit-scrollbar-thumb:hover {
   height: 100%;
   z-index: 0;
   overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 .marketContainer {
@@ -2602,6 +2609,18 @@ body::-webkit-scrollbar-thumb:hover {
   transform: translate(0.5px);
 }
 
+@media(max-width: 768px) {
+  .marketItemContainer {
+    flex-basis: 48%;
+    width: 47%;
+  }
+
+  .marketItemContainer:hover {
+    width: 48.5%;
+    height: 255px;
+  }
+}
+
 .marketItemImg {
   width: 60%;
   height: 60%;
@@ -2664,12 +2683,24 @@ body::-webkit-scrollbar-thumb:hover {
   gap: 5px;
 }
 
+@media(max-width: 768px) {
+  .marketItemsValue {
+    flex-direction: column;
+  }
+}
+
 .marketUpperPanel {
   margin: 15px 10px 0 10px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   flex-basis: 100%;
+}
+
+@media(max-width: 768px) {
+  .marketUpperPanel {
+    font-size: 0.6em;
+  }
 }
 
 .rightUpperMarket {
@@ -2690,6 +2721,12 @@ body::-webkit-scrollbar-thumb:hover {
   padding: 5px;
   border-radius: 5px;
   transition: width 0.1s ease-in;
+}
+
+@media(max-width: 768px) {
+  .searchContainerMarket {
+    width: 55%;
+  }
 }
 
 .searchMarket {
@@ -2833,6 +2870,79 @@ body::-webkit-scrollbar-thumb:hover {
   transition: font-size 0.1s ease-in;
 }
 
+@media (max-width: 768px) {
+  .profilePage {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    overflow-y: auto;
+    max-height: 90vh;
+  }
+
+  .profileContainer {
+    width: 95vw;
+    margin-left: 2.5vw;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    gap: 30px;
+    overflow-y: auto;
+    overflow-x: hidden;
+  }
+
+  .profileContainer::-webkit-scrollbar {
+    width: 4px;
+  }
+
+  .profileContainer::-webkit-scrollbar-thumb {
+    background-color: #3b4963;
+    border-radius: 6px;
+  }
+
+  .profileContainer::-webkit-scrollbar-track {
+    background-color: #111827;
+    border-radius: 6px;
+  }
+
+  .profileContainer::-webkit-scrollbar-thumb:hover {
+    background-color: #334057;
+  }
+
+  .profilePage::-webkit-scrollbar {
+    width: 4px;
+  }
+
+  .profilePage::-webkit-scrollbar-thumb {
+    background-color: #3b4963;
+    border-radius: 6px;
+  }
+
+  .profilePage::-webkit-scrollbar-track {
+    background-color: #111827;
+    border-radius: 6px;
+  }
+
+  .profilePage::-webkit-scrollbar-thumb:hover {
+    background-color: #334057;
+  }
+
+  .profileInfo {
+    flex-basis: 90%;
+    width: 100%;
+  }
+
+  .affiliateInfo {
+    flex-basis: 90%;
+    width: 100%;
+    gap: 45px;
+    padding: 10px 0 45px 0;
+  }
+
+  .outerInfoContainer {
+    row-gap: 25px;
+  }
+}
+
 .btnSave:hover {
   font-size: 1.6em;
   cursor: pointer;
@@ -2924,6 +3034,7 @@ body::-webkit-scrollbar-thumb:hover {
   height: 100%;
   z-index: 0;
   overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .rewardsContainer {
@@ -2950,6 +3061,12 @@ body::-webkit-scrollbar-thumb:hover {
   width: 50%;
   height: 100%;
   gap: 25px;
+}
+
+@media(max-width: 768px) {
+  .rewardDiv {
+    width: 90%;
+  }
 }
 
 .nextRew {
@@ -3148,6 +3265,7 @@ body::-webkit-scrollbar-thumb:hover {
   height: 100%;
   z-index: 0;
   overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .mainContentContainer {
@@ -3236,13 +3354,6 @@ body::-webkit-scrollbar-thumb:hover {
   box-shadow: 0 0 5px rgba(255, 255, 255, 0.5);
 }
 
-/*.leaderUsername {*/
-/*  max-width: 100px;*/
-/*  white-space: nowrap;*/
-/*  overflow: hidden;*/
-/*  text-overflow: ellipsis;*/
-/*}*/
-
 .leaderUserInfo {
   display: flex;
   flex-direction: row;
@@ -3263,8 +3374,37 @@ body::-webkit-scrollbar-thumb:hover {
 }
 
 .totalUpper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-size: 0.8em;
   color: rgba(255, 255, 255, 0.3);
+}
+
+@media(max-width: 768px) {
+  .leaderImg {
+    width: 40px;
+    height: 40px;
+  }
+
+  .leaderUsername {
+    font-size: 0.7em;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 80px;
+  }
+
+  .totalUpper {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    font-size: 0.6em;
+  }
+
+  .leaderUserInfo {
+    flex-basis: 35%;
+  }
 }
 
 .addItems {
@@ -3373,6 +3513,33 @@ body::-webkit-scrollbar-thumb:hover {
   width: 100%;
 }
 
+@media(max-width: 1200px) {
+  .addItemContainer {
+    width: 46%;
+  }
+
+  .addItemContainer:hover {
+    width: 46%;
+  }
+}
+
+@media(max-width: 768px) {
+  .addItemContainer {
+    height: 200px;
+    width: 45%;
+  }
+
+  .addItemContainer:hover {
+    width: 46%;
+    height: 200px;
+  }
+
+  .btnsJoin {
+    width: 100%;
+    align-self: center;
+  }
+}
+
 .btnCreateGame {
   display: flex;
   justify-content: center;
@@ -3404,6 +3571,12 @@ body::-webkit-scrollbar-thumb:hover {
 .btnCreateGame:disabled {
   cursor: not-allowed;
   transform: none;
+}
+
+@media(max-width: 768px) {
+  .btnCreateGame {
+    height: 30px;
+  }
 }
 
 .btnAddItems {
@@ -3495,6 +3668,7 @@ body::-webkit-scrollbar-thumb:hover {
   height: 100%;
   z-index: 0;
   overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .supportContainer {
@@ -3521,6 +3695,12 @@ body::-webkit-scrollbar-thumb:hover {
   font-size: 2em;
   color: rgba(255, 255, 255, 0.95);
   text-shadow: -1px 1px 4px rgba(255, 255, 255, 0.4);
+}
+
+@media(max-width: 768px) {
+  .supportHeader {
+    font-size: 1.5em;
+  }
 }
 
 .notAuthorizedText {
@@ -3573,8 +3753,15 @@ body::-webkit-scrollbar-thumb:hover {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  width: 800px;
+  width: 90%;
   align-items: center;
+}
+
+@media(max-width: 768px) {
+  .btnsSupport {
+    flex-direction: column;
+    gap: 8px;
+  }
 }
 
 .supportBtn {
@@ -3708,6 +3895,17 @@ body::-webkit-scrollbar-thumb:hover {
   height: 100%;
   width: 20%;
   flex-basis: 20%;
+}
+
+@media(max-width: 768px) {
+  .messageQuestion {
+    flex-basis: 55%;
+  }
+
+  .usernameQuestion {
+    flex-basis: 45%;
+    width: 45%;
+  }
 }
 
 .yourAnswersHeader {
@@ -3905,14 +4103,6 @@ body::-webkit-scrollbar-thumb:hover {
   flex-basis: 10%;
 }
 
-.rarityBuy {
-  font-family: 'Questrial', sans-serif;
-  font-weight: 500;
-  font-size: 1.3em;
-  color: rgba(255, 255, 255, 0.4);
-  flex-basis: 10%;
-}
-
 .priceBuy {
   position: absolute;
   top: 5px;
@@ -3951,6 +4141,13 @@ body::-webkit-scrollbar-thumb:hover {
   animation: opacityFade 0.3s;
   transform: translateY(-20px);
   transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+}
+
+@media(max-width: 768px) {
+  .modalWindowDeposit {
+    width: 95%;
+    min-width: 340px;
+  }
 }
 
 .worthDeposit {
@@ -4054,6 +4251,13 @@ body::-webkit-scrollbar-thumb:hover {
   background-color: rgba(173, 12, 0, 1);
 }
 
+@media(max-width: 768px) {
+  .depositBtn {
+    font-size: 0.9em;
+    height: 30px;
+  }
+}
+
 .depositButtons {
   display: flex;
   flex-direction: row;
@@ -4139,6 +4343,18 @@ body::-webkit-scrollbar-thumb:hover {
   transform: translate(0.3px);
 }
 
+@media(max-width: 1200px) {
+  .optionContainer {
+    min-width: 45%;
+  }
+}
+
+@media(max-width: 768px) {
+  .optionContainer {
+    min-width: 45%;
+  }
+}
+
 .iconAdmin {
   font-size: 2.5em;
 }
@@ -4180,6 +4396,18 @@ body::-webkit-scrollbar-thumb:hover {
   transform: translateY(-20px);
   transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
   overflow-x: hidden;
+}
+
+@media(max-width: 1200px) {
+  .modalWindowAdmin {
+    width: 90%;
+  }
+}
+
+@media(max-width: 768px) {
+  .modalWindowAdmin {
+    width: 95%;
+  }
 }
 
 .inputAdmin {
@@ -4324,6 +4552,29 @@ body::-webkit-scrollbar-thumb:hover {
   outline: none;
 }
 
+.addressStringContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+  width: 90%;
+}
+
+.iconCopy {
+  font-size: 1em;
+  color: rgba(255, 255, 255, 0.9);
+  transition: background-color 0.15s ease-in;
+}
+
+.iconCopy:hover {
+  cursor: pointer;
+  color: rgba(255, 255, 255, 1);
+}
+
+.iconCopy:active {
+  transform: translateY(0.5px);
+}
+
 .beneathAddress {
   font-family: 'Questrial', sans-serif;
   font-weight: 500;
@@ -4435,6 +4686,7 @@ body::-webkit-scrollbar-thumb:hover {
   justify-content: space-between;
   padding: 5px;
   height: 15%;
+  width: 95%;
   align-items: center;
   border: solid 1px rgba(255, 255, 255, 0.7);
   border-radius: 5px;
@@ -4687,9 +4939,20 @@ input[type="range"]::-webkit-slider-thumb {
   width: 95%;
   height: 50px;
   border-radius: 5px;
+  gap: 5px;
   border: solid 2px rgba(255, 255, 255, 0.4);
   box-shadow: 0 0 3px rgba(255, 255, 255, 0.4);
   padding: 0 0 0 5px;
+}
+
+@media(max-width: 768px) {
+  .botContainer {
+    gap: 8px;
+  }
+
+  .botsConnectContainer {
+    width: 100%;
+  }
 }
 
 .botAvatar {
@@ -4764,6 +5027,17 @@ input[type="range"]::-webkit-slider-thumb {
   gap: 5px;
 }
 
+@media(max-width: 768px) {
+  .btnBotConnect {
+    font-size: 0.9em;
+    width: 30%;
+  }
+
+  .connectModalLowerText {
+    font-size: 0.67em;
+  }
+}
+
 .banPage {
   position: fixed;
   display: flex;
@@ -4774,6 +5048,7 @@ input[type="range"]::-webkit-slider-thumb {
   height: 100%;
   z-index: 0;
   overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .bannedMessage {
@@ -4801,6 +5076,13 @@ input[type="range"]::-webkit-slider-thumb {
   width: 37%;
 }
 
+@media(max-width: 768px) {
+  .errorWindow {
+    width: 90%;
+    height: 35%;
+  }
+}
+
 .modalWindowMain {
   position: relative;
   display: flex;
@@ -4816,6 +5098,18 @@ input[type="range"]::-webkit-slider-thumb {
   height: 75%;
   animation: fadeIn 0.15s ease-in;
   transition: width 0.1s ease-in, height 0.1s ease-in;
+}
+
+@media(max-width: 1200px) {
+  .modalWindowMain {
+    width: 90%;
+  }
+}
+
+@media(max-width: 768px) {
+  .modalWindowMain {
+    width: 90%;
+  }
 }
 
 .inventoryContainer {
@@ -4884,6 +5178,20 @@ input[type="range"]::-webkit-slider-thumb {
   transform: translateY(0.5px);
 }
 
+@media(max-width: 768px) {
+  .inventoryItemContainer {
+    width: 48%;
+    height: 50%;
+  }
+
+  .inventoryItemContainer:hover {
+    cursor: pointer;
+    background-color: #223245;
+    width: 48%;
+    height: 50%;
+  }
+}
+
 .imgItemContainer {
   width: 55%;
   height: 60%;
@@ -4895,11 +5203,6 @@ input[type="range"]::-webkit-slider-thumb {
   font-weight: 500;
   color: rgba(255, 255, 255, 0.85);
   text-shadow: 0 0 3px rgba(255, 255, 255, 0.5);
-}
-
-.rarityItemContainer {
-  font-family: 'Questrial', sans-serif;
-  font-size: 0.8em;
 }
 
 .priceItemContainer {
@@ -4915,7 +5218,6 @@ input[type="range"]::-webkit-slider-thumb {
 }
 
 .giveawayChosenTotalValue {
-  position: absolute;
   display: flex;
   gap: 3px;
   justify-content: center;
@@ -4925,12 +5227,9 @@ input[type="range"]::-webkit-slider-thumb {
   font-weight: 500;
   color: rgba(255, 255, 255, 0.85);
   text-shadow: 0 0 3px rgba(255, 255, 255, 0.4);
-  top: 3%;
-  left: 5%;
 }
 
 .giveawayChosenAmount {
-  position: absolute;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -4939,8 +5238,6 @@ input[type="range"]::-webkit-slider-thumb {
   font-size: 1.1em;
   color: rgba(255, 255, 255, 0.85);
   text-shadow: 0 0 3px rgba(255, 255, 255, 0.4);
-  top: 3%;
-  right: 5%;
 }
 
 .timersContainer {
@@ -4979,6 +5276,12 @@ input[type="range"]::-webkit-slider-thumb {
 
 .chooseTimer:active {
   transform: translateY(0.5px);
+}
+
+@media(max-width: 768px) {
+  .chooseTimer {
+    font-size: 0.68em;
+  }
 }
 
 .chosenTimer {
@@ -5105,6 +5408,14 @@ input[type="range"]::-webkit-slider-thumb {
   color: rgba(255, 255, 255, 0.85);
   text-shadow: 0 0 3px rgba(255, 255, 255, 0.4);
   flex-wrap: nowrap;
+}
+
+.giveawayUpperInfo {
+  display: flex;
+  justify-content: space-between;
+  width: 95%;
+  align-items: center;
+  height: fit-content;
 }
 
 
