--- a/src/index.css
+++ b/src/index.css
@@ -5515,6 +5515,118 @@ input[type="range"]::-webkit-slider-thumb {
   transform: translateY(0.5px);
 }
 
+.aUsers {
+  font-family: 'Poppins', sans-serif;
+  font-size: 1.1em;
+  font-weight: 600;
+  color: rgba(255, 255, 255, 0.85);
+  text-shadow: 0 0 4px rgba(255, 255, 255, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 4px;
+}
+
+.aUsersAmount {
+  font-size: 1em;
+  color: rgba(255, 45, 45, 1);
+  text-shadow: 0 0 4px rgba(255, 45, 45, 0.5);
+}
+
+.receiverContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 9px;
+  font-family: 'Poppins', sans-serif;
+  font-size: 1.2em;
+  font-weight: 600;
+  color: rgba(255, 255, 255, 0.9);
+  text-shadow: 0 0 4px rgba(255, 255, 255, 0.5);
+}
+
+.taxDataContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 7px;
+  border: solid 1px rgba(255, 255, 255, 0.5);
+  border-radius: 5px;
+  font-family: 'Poppins', sans-serif;
+  font-size: 1.1em;
+  color: rgba(255, 255, 255, 0.9);
+  text-shadow: 0 0 4px rgba(255, 255, 255, 0.5);
+  width: 90%;
+  box-shadow: 0 1px 7px rgba(255, 255, 255, 0.4);
+  gap: 8px;
+}
+
+.tx_C_Container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 7px;
+  border: solid 1px rgba(255, 255, 255, 0.5);
+  box-shadow: 0 1px 7px rgba(255, 255, 255, 0.5);
+  border-radius: 8px;
+  width: 90%;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 500;
+  font-size: 1.15em;
+  color: rgba(255, 255, 255, 0.9);
+  text-shadow: 0 0 3px rgba(255, 255, 255, 0.5);
+  gap: 15px;
+}
+
+.receiverInput {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 500;
+  font-size: 1em;
+  color: #192432;
+  text-shadow: 0 0 1px #192432;
+  padding: 5px;
+  outline: solid 2px rgba(255, 255, 255, 0.65);
+  border: none;
+  border-radius: 5px;
+  width: calc(90% - 10px);
+  transition: outline-width 0.15s ease-in, outline-color 0.15s ease-in;
+}
+
+.receiverInput:focus {
+  outline: solid 2px rgb(134, 20, 16);
+}
+
+.timerSetReceiver {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px;
+  height: 30px;
+  width: 90%;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 500;
+  font-size: 1.15em;
+  color: rgba(255, 255, 255, 0.9);
+}
+
+.timerReceiverContainer {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 8px;
+  width: 30%;
+  height: 100%;
+}
+
+.textReceiverTimerSettings {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
 
 
 
