--- a/client/src/index.css
+++ b/client/src/index.css
@@ -228,7 +228,7 @@ body::-webkit-scrollbar-thumb:hover {
 }
 
 .logoNavigation {
-  width: 180px;
+  width: 200px;
   height: 74.7%;
   margin-left: 10px;
 }
@@ -260,7 +260,6 @@ body::-webkit-scrollbar-thumb:hover {
   font-family: 'Poppins', sans-serif;
   font-weight: 500;
   font-size: 1.3em;
-  text-shadow: 0 0 5px rgba(255, 255, 255, 0.7);
   color: #FFFFFF;
 }
 
@@ -277,7 +276,6 @@ body::-webkit-scrollbar-thumb:hover {
   font-weight: 500;
   font-size: 1.2em;
   color: #FFFFFF;
-  text-shadow: 0 0 5px rgba(255, 255, 255, 0.7);
   cursor: pointer;
 }
 
@@ -490,6 +488,7 @@ body::-webkit-scrollbar-thumb:hover {
   background-color: #192432;
   border: none;
   border-radius: 0 7px 7px 7px;
+  margin-bottom: 10px;
 }
 
 @media (max-width: 1200px) {
@@ -774,7 +773,6 @@ body::-webkit-scrollbar-thumb:hover {
   font-size: 1em;
   width: 92.7%;
   cursor: pointer;
-  text-shadow: -1px 1px 3px rgba(255, 255, 255, 0.8);
   transition: font-size 0.1s ease-in;
 }
 
@@ -1203,7 +1201,6 @@ body::-webkit-scrollbar-thumb:hover {
   color: #FFFFFF;
   font-family: 'Righteous', sans-serif;
   font-size: 1.3em;
-  text-shadow: 1px 1px 5px rgba(255, 255, 255, 1);
 }
 
 .itemsAmount {
@@ -1332,7 +1329,6 @@ body::-webkit-scrollbar-thumb:hover {
   margin-left: -0.5rem;
   width: 100%;
   color: rgba(255, 255, 255, 0.9);
-  text-shadow: 1px 1px 3px rgba(255, 255, 255, 0.5);
 }
 
 @media(max-width: 768px) {
@@ -1662,7 +1658,6 @@ body::-webkit-scrollbar-thumb:hover {
   font-size: 1.2em;
   font-family: 'Poppins', sans-serif;
   font-weight: 700;
-  text-shadow: 0 1px 5px rgba(255, 255, 255, 0.7);
 }
 
 .usersOnline {
@@ -3088,10 +3083,8 @@ body::-webkit-scrollbar-thumb:hover {
 .rewardImg {
   width: 150px;
   height: 150px;
-  border: solid 1px #940000;
   border-radius: 50%;
   padding: 5px;
-  box-shadow: 0 0 25px 5px rgba(255, 0, 0, 0.5);
 }
 
 .rewardName {
@@ -3301,7 +3294,7 @@ body::-webkit-scrollbar-thumb:hover {
 .leadersText {
   font-family: 'Questrial', sans-serif;
   font-size: 2.4em;
-  text-shadow: 2px 2px 9px rgba(255, 255, 255, 0.9);
+  text-shadow: 0 0 3px rgba(255, 255, 255, 0.9);
   color: rgba(255, 255, 255, 0.9);
   display: flex;
   flex-direction: row;
@@ -3373,7 +3366,6 @@ body::-webkit-scrollbar-thumb:hover {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
-  text-shadow: 0 2px 9px rgba(255, 255, 255, 0.65);
   align-items: center;
   gap: 7px;
   flex-basis: 25%;
@@ -5625,6 +5617,15 @@ input[type="range"]::-webkit-slider-thumb {
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
+}
+
+.explainingText {
+  width: 100%;
+  align-self: center;
+  font-family: 'Poppins', sans-serif;
+  font-size: 0.85em;
+  color: rgba(255, 255, 255, 0.7);
+  font-weight: 400;
 }
 
 
